--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -6,7 +6,7 @@ $secondary-color: #000;
 $purple: #6b45c5;
 $grey: #9ea7ad;
 
-$info: #00aff0;
+$info: #2dccff;
 $warning: #ffb302;
 $alert: #ff3838;
 $success: #56f000;
