--- a/app/assets/stylesheets/core/_menu.scss
+++ b/app/assets/stylesheets/core/_menu.scss
@@ -83,7 +83,7 @@
 						}
 
 						&.equipments {
-					    @include background("icons/laptop.svg", "icon");
+					    @include background("icons/equipments.svg", "icon");
 						}
 
 						&.schools {
