--- a/app/assets/stylesheets/base/_functions.scss
+++ b/app/assets/stylesheets/base/_functions.scss
@@ -56,6 +56,17 @@
         margin-left: #{$i + "px"} !important;
       }
     }
+
+    @media screen and (max-width: 767px) {
+      &.flex-row {
+        margin: 0 !important;
+        width: 100%;
+
+        .flex-col {
+          margin-left: 0 !important;
+        }
+      } 
+    }
   }
 }
 
@@ -70,5 +81,14 @@
 
   .flex-col-#{$i} {
     width: calc(100%/12*#{$i});
+
+    @media only screen and (max-width: 991px) {
+      @include span-columns(6);
+    }
+
+    @media screen and (max-width: 767px) {
+      @include span-columns(12);
+      margin: 0;
+    }
   }
 }
