--- a/app/assets/stylesheets/core/_buttons.scss
+++ b/app/assets/stylesheets/core/_buttons.scss
@@ -11,7 +11,7 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 18px;
-  border-radius: 20px;
+  border-radius: 50px;
   min-width: 120px;
   @include prefix(box-shadow, rgba(0, 0, 0, 0.02) 0 1px 3px 0);
   @include prefix(transition, all 250ms);
@@ -58,26 +58,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: calc(1.25em + 20px);
-  height: calc(1.25em + 20px);
-  border: solid 1px #d6d6d6;
+  width: calc(1em + 20px);
+  height: calc(1em + 20px);
   border-radius: 50%;
   @include prefix(box-shadow, rgba(0, 0, 0, 0.02) 0 1px 3px 0);
   @include prefix(transition, all 250ms);
   background-clip: padding-box;
+  background-color: #000;
 
   img {
-    width: 1.25em;
-    height: 1.25em;
+    width: 16px;
+    height: 16px;
+    @include prefix(filter, invert(100%));
   }
 
   &:hover {
     @include prefix(transform, translateY(-1px));
-    @include prefix(box-shadow, rgba(0, 0, 0, .06) 0 2px 4px);
+    @include prefix(box-shadow, rgba(0, 0, 0, 0.1) 0 4px 12px);
+    opacity: .75;
   }
 
   &:active {
-    background-color: #f4f4f4;
     @include prefix(transform, translateY(0));
+    @include prefix(box-shadow, rgba(0, 0, 0, .06) 0 2px 4px);
+    opacity: 1;
   }
 }
