--- a/app/assets/stylesheets/modules/orders.scss
+++ b/app/assets/stylesheets/modules/orders.scss
@@ -1,5 +1,5 @@
 #orders {
-	&.new, &.create, &.edit, &.update {
+	&.new, &.create, &.edit, &.update, &.show {
 		.main-panel .main-container {
 			.container-header {
 				.header-title {
@@ -22,24 +22,116 @@
 			justify-content: space-between;
 			align-items: center;
 
+			.sp input {
+				margin-top: 5px;
+				background-color: transparent;
+				color: $info;
+				cursor: pointer;
+				font-style: italic;
+				font-size: .75em;
+
+				&:hover {
+					text-decoration: underline;
+				}
+			}
+
 			.right-content {
 				display: flex;
 				align-items: center;
 				gap: 10px;
+
+				.action-buttons {
+					gap: 10px;
+					display: flex;
+					align-items: center;
+			    border-radius: 50px;
+				}
 			}
 		}
 
 		.container-body {
+			.order-container {
+				&:nth-child(n+2) {
+					margin-top: 50px;
+				}
+
+				&.em-aberto h4 span {
+			  	color: $info;
+			  }
+
+			  &.em-manutencao h4 span {
+			  	color: $grey;
+			  }
+
+			  &.para-retirada h4 span {
+			  	color: $purple;
+			  }
+
+			  &.saiu-para-entrega h4 span {
+			  	color: $warning;
+			  }
+
+			  &.aguardando-pecas h4 span {
+			  	color: $alert;
+			  }
+
+			  &.concluido h4 span {
+			  	color: $success;
+			  }
+			}
+
+			.order-status-title {
+				font-weight: 300;
+				margin-bottom: 10px;
+
+				span {
+					font-weight: 600;
+					text-transform: uppercase;
+					color: $info;
+				}
+			}
+
 			.order-cards {
 				display: grid;
 				grid-gap: 25px;
-				grid-template-columns: 1fr 1fr 1fr 1fr;
+				grid-template-columns: 1fr 1fr 1fr;
+
+				&.as-list {
+					grid-template-columns: 1fr;
+				}
 
 				.order-card {
 				  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 				  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 				  border-radius: 5px;
 				  min-width: 200px;
+				  display: flex;
+				  flex-direction: column;
+				  position: relative;
+
+				  &.em-aberto {
+				  	border-top: solid 10px $info;
+				  }
+
+				  &.em-manutencao {
+				  	border-top: solid 10px $grey;
+				  }
+
+				  &.para-retirada {
+				  	border-top: solid 10px $purple;
+				  }
+
+				  &.saiu-para-entrega {
+				  	border-top: solid 10px $warning;
+				  }
+
+				  &.aguardando-pecas {
+				  	border-top: solid 10px $alert;
+				  }
+
+				  &.concluido {
+				  	border-top: solid 10px $success;
+				  }
 
 					&:hover {
 					  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -68,6 +160,14 @@
 						}
 					}
 
+					.order-card-link {
+						position: absolute;
+						left: 0;
+						top: 0;
+						right: 0;
+						bottom: 0;
+					}
+
 					.order-card-header {
 						display: flex;
 						align-items: start;
@@ -75,24 +175,92 @@
 					}
 
 					.order-card-body {
-						padding: 5px 15px 25px 15px;
+						padding: 50px 25px;
 				    text-align: center;
+				    height: 100%;
+
+				    h4 {
+				    	font-weight: 400;
+				    	margin-bottom: 5px;
+				    }
 
 				    p {
-				    	text-overflow: ellipsis;
 				    	overflow: hidden;
-				    	white-space: nowrap;
-				    	font-size: .9em;
+				    	display: -webkit-box;
+					    -webkit-line-clamp: 3;
+					    -webkit-box-orient: vertical;
+					    overflow: hidden;
+				    	font-size: .75em;
+				    	font-weight: 700;
 				    }
 					}
 
 					.order-card-footer {
-						width: 100%;
-						height: 10px;
-						margin-bottom: 10px;
+						span {
+							margin-left: 15px;
+							font-size: .75em;
+							font-weight: 600;
+						}
 
-						&.aberto {
-							background-color: #2dccff;							
+						.options {
+							@extend .pull-right;
+							position: relative;
+
+							.options-btn {
+								content: "";
+								width: 16px;
+								height: 16px;
+								display: inline-block;
+								margin: 0 5px 15px 0;
+								@include background("icons/dots-v.svg", "icon");
+								opacity: .5;
+							}
+
+							ul {
+								z-index: 999;
+								display: none;
+								list-style: none;
+								position: absolute;
+						    top: calc(100% + 10px);
+						    right: 0;
+								background-color: $primary-color;
+								border-radius: 5px;
+								box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+								&:before, &:after {
+									content: "";
+						      position: absolute;
+						      border-left: solid 6px transparent;
+						      border-right: solid 6px transparent;
+						      bottom: 100%;
+								}
+
+								&:before {
+						      right: 6px;
+						      bottom: 100%;
+						      border-bottom: solid 6px #fff;
+						      z-index: 3;
+								}
+
+								&:after {
+						      right: 5px;
+						      border-bottom: solid 6px #d6d6d6;
+						      z-index: 2;
+								}
+
+								li a {
+									display: block;
+									padding: 10px 15px;
+									transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+									white-space: nowrap;
+									font-size: .75em;
+									border-radius: 5px;
+
+									&:hover {
+										background-color: #f4f4f4;
+									}
+								}
+							}
 						}
 					}
 				}
@@ -100,7 +268,7 @@
 		}
 	}
 
-	&.edit, &.update {
+	&.edit, &.update, &.show {
 		.order-tabs {
 			position: relative;
 
@@ -140,8 +308,37 @@
 		}
 	}
 
+	&.show {
+		.main-panel .main-container .container-body {
+			h3 {
+				text-transform: uppercase;
+				font-weight: 300;
+			}
+
+			p {
+				font-size: .9em;
+				color: $grey;
+			}
+		}
+	}
+
 	.main-panel {
 		.main-container {
+			.order-info {
+				align-items: flex-end;
+				margin-bottom: 5px;
+
+				h6 span {
+					font-weight: 400;
+				}
+
+				.updated-at {
+					font-size: .75em;
+					font-style: italic;
+					color: #d6d6d6;
+				}
+			}
+
 			.form {
 				.equipment-category {
 					font-size: .9em;
@@ -170,8 +367,8 @@
 							}
 
 							&:before {
-								width: 90px;
-								height: 90px;
+								width: 6em;
+								height: 6em;
 								background-color: #d6d6d6;
 								position: relative;
 								z-index: 2;
@@ -182,8 +379,8 @@
 								top: 0;
 								left: 50%;
 								@include prefix(transform, translateX(-50%));
-								width: 100px;
-								height: 100px;
+								width: 7em;
+								height: 7em;
 								background-color: #f4f4f4;
 							}
 
@@ -199,24 +396,24 @@
 								}
 							}
 
-							&[for="order_stuff_attributes_category_cpu"]:before {
-								@include background("icons/cpu.svg", 48px);
+							&[for="order_stuff_attributes_category_pcnotebook"]:before {
+								@include background("icons/laptop.svg", 2em);
 							}
 
 							&[for="order_stuff_attributes_category_monitor"]:before {
-								@include background("icons/monitor.svg", 32px);
+								@include background("icons/monitor.svg", 2em);
 							}
 
 							&[for="order_stuff_attributes_category_impressora"]:before {
-								@include background("icons/printer.svg", 32px);
+								@include background("icons/printer.svg", 2em);
 							}
 
 							&[for="order_stuff_attributes_category_estabilizadorno-break"]:before {
-								@include background("icons/nobreak.svg", 32px);
+								@include background("icons/nobreak.svg", 2em);
 							}
 
 							&[for="order_stuff_attributes_category_outro"]:before {
-								@include background("icons/dots.svg", 32px);
+								@include background("icons/dots.svg", 2em);
 							}
 						}
 					}
