--- a/app/assets/stylesheets/modules/users.scss
+++ b/app/assets/stylesheets/modules/users.scss
@@ -1,4 +1,5 @@
 .login-panel {
+	max-width: 1280px;
 	max-height: 720px;
 	height: 100%;
 	position: relative;
@@ -163,7 +164,7 @@
 		}
 
 		.right-content {
-			padding-top: 85px;
+			padding-top: 82px;
 		}
 
 		.actions {
