--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,8 @@
 	<%= render "layouts/main_menu" %>
 
 	<div class="container main-container">
+		<%= flash_message %>
+		
 		<header class="container-header">
 			<p class="header-subtitle">Bem vindo,</p>
 			<h1 class="header-title"><span><%= username %>!</span></h1>
