--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -11,14 +11,14 @@
     		<div class="flex-col flex-col-12 order-id text-center">
     			<%= content_tag :h6 do %>
     				<%= "Chamado ##{@order.id.to_s.rjust(3, '0')}" %>
-    				<%= content_tag :span, " - #{order_creator(@order.user_id)}" if is_admin? %>
+    				<%= content_tag :span, " - #{order_creator(@order.order_school)}" if is_admin? %>
     			<% end %>
     		</div>
     	</div>
 
   		<section class="bordered">
   			<%= content_tag :dl do %>
-    			<%= content_tag :dt, "Nome do(a) solicitante:" %>
+    			<%= content_tag :dt, "Nome do(a) solicitante" %>
   				<%= content_tag :dd, @order.requester %>
   			<% end %>
   		</section>
@@ -27,27 +27,27 @@
   			<h3 class="m-b-25">Informações do equipamento</h3>
 
       	<%= content_tag :dl do %>
-    			<%= content_tag :dt, "Categoria:" %>
+    			<%= content_tag :dt, "Categoria" %>
   				<%= content_tag :dd, @order.stuff.category %>
   			<% end %>
 
       	<%= content_tag :dl do %>
-    			<%= content_tag :dt, "Número de patrimônio:" %>
+    			<%= content_tag :dt, "Número de patrimônio" %>
   				<%= content_tag :dd, get_patrimony(@order.stuff.patrimony) %>
   			<% end %>
 
       	<%= content_tag :dl do %>
-    			<%= content_tag :dt, "Marca/modelo:" %>
+    			<%= content_tag :dt, "Marca/modelo" %>
   				<%= content_tag :dd, @order.stuff.brand %>
   			<% end %>
 
       	<%= content_tag :dl do %>
-    			<%= content_tag :dt, "Local de instalação:" %>
+    			<%= content_tag :dt, "Local de instalação" %>
   				<%= content_tag :dd, @order.spot %>
   			<% end %>
 
       	<%= content_tag :dl do %>
-    			<%= content_tag :dt, "Defeito apresentado:" %>
+    			<%= content_tag :dt, "Defeito apresentado" %>
   				<%= content_tag :dd, @order.defect %>
   			<% end %>
   		</section>
@@ -61,17 +61,17 @@
   			<% end %>
 
       	<%= content_tag :dl do %>
-    			<%= content_tag :dt, "Status:" %>
+    			<%= content_tag :dt, "Status" %>
   				<%= content_tag :dd, @order.status %>
   			<% end %>
 
       	<%= content_tag :dl do %>
-    			<%= content_tag :dt, "Serviço realizado:" %>
+    			<%= content_tag :dt, "Serviço realizado" %>
   				<%= content_tag :dd, @order.performed_service %>
   			<% end %>
 
       	<%= content_tag :dl do %>
-    			<%= content_tag :dt, "Observações:" %>
+    			<%= content_tag :dt, "Observações" %>
   				<%= content_tag :dd, @order.obs %>
   			<% end %>
 
