--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -4,12 +4,12 @@
 	height: 100%;
 	position: relative;
 	background-color: #f4f4f4;
-	padding: 15px;
 }
 
 .row, .flex-row {
 	width: 100%;
 	@include outer-container;
+	max-width: auto;
 }
 
 .flex-row {
@@ -104,7 +104,7 @@
 	}
 
 	input[type="text"], input[type="number"] {
-		padding: 10px 130px 10px 46px;
+		padding: 10px 10px 10px 46px;
 		border: solid 1px #d6d6d6;
 		border-radius: 50px;
 		font-size: .75em;
@@ -113,6 +113,7 @@
 	}
 
 	input[type="submit"] {
+		display: none;
 		position: absolute;
 		right: 1px;
 		top: 50%;
@@ -124,10 +125,6 @@
 		text-transform: uppercase;
 		font-weight: 600;
 		@include prefix(transition, all 250ms);
-
-		&:hover {
-			opacity: .75;
-		}
 	}
 }
 
@@ -223,7 +220,7 @@
 }
 
 section.bordered {
-	border: solid 1px #eaeaea;
+	@include prefix(box-shadow, rgba(149, 157, 165, 0.2) 0px 8px 24px);
   border-radius: 5px;
   padding: 25px;
 
