--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -23,7 +23,7 @@
 	      		<div class="flex-col flex-col-6 order-id">
 	      			<%= content_tag :h6 do %>
 	      				<%= "Chamado ##{@order.id.to_s.rjust(3, '0')}" %>
-	      				<%= content_tag :span, " - #{order_creator(@order.user_id)}" if is_admin? %>
+	      				<%= content_tag :span, " - #{order_creator(@order.order_school)}" if is_admin? %>
 	      			<% end %>
 	      		</div>
 
@@ -127,7 +127,7 @@
 
 	    		<% if is_admin? || @order.status == "Em aberto" %>
 		        <div class="actions m-t-25">
-		          <%= f.submit "Atualizar dados", data: { disable_with: "Aguarde..." }, class: "btn" %>
+		          <%= f.submit "Atualizar dados", data: { disable_with: "Aguarde..." }, class: "btn-success" %>
 		          <%= link_to "Voltar", :back, class: "btn-cancel" %>
 		          <%= link_to "Cancelar chamado", destroy_order_path(@order), method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." }, class: "btn-alert" %>
 		        </div>
